...
            <objects>
                <navigationController id="oio-yW-ffw" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Subjects" id="fbn-mv-UQP"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="mEa-JU-muI">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EW6-QI-xwZ">
                                <rect key="frame" x="58" y="162" width="45" height="21"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                <rect key="frame" x="188" y="157" width="97" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="add-subject-name"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocorrectionType="no"/>
                            </textField>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Coefficient" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3aT-5W-tLm">
                                <rect key="frame" x="58" y="211" width="84" height="21"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                <rect key="frame" x="188" y="206" width="97" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="add-subject-coefficient">
                                    <bool key="isElement" value="YES"/>
                                </accessibility>
...
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                    </view>
                    <navigationItem key="navigationItem" title="Add subject" id="kVp-Eu-4g9">
                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="MxN-iK-Odb">
                            <connections>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Value" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="icx-JA-5L9">
                                <rect key="frame" x="139" y="162" width="97" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                    </view>
                    <navigationItem key="navigationItem" title="New Mark" id="vl0-43-6f3">
                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="mLJ-9a-nck">
                            <connections>
...
                                <rect key="frame" x="132" y="246" width="111" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="Empty database"/>
                                <connections>
                                    <action selector="resetDatabase:" destination="XEs-qN-ZVg" eventType="touchUpInside" id="J2e-CA-z8k"/>
...
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                    </view>
                    <navigationItem key="navigationItem" title="Settings" id="GsZ-15-00z"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="UM9-Md-H1y" userLabel="First Responder" sceneMemberID="firstResponder"/>
...
